SpokeVPC_Distributed_CNF_DualAZ.template.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "(v5.1) Deploy a spoke VPC for a FortiGate CNF design with 6 subnets (Public, Private, Gwlbe) across 2 Availability Zones.",
	"Metadata": {
		"AWS::CloudFormation::Interface": {
			"ParameterGroups": [
				{
					"Label": {
						"default": "Nested Stack Name"
					},
					"Parameters": [
						"StackName"
					]
				},
				{
					"Label": {
						"default": "VPC Configuration"
					},
					"Parameters": [
						"VPCCIDR",
						"PublicSubnet1",
						"PublicSubnet2",
						"PrivateSubnet1",
						"PrivateSubnet2",
						"GwlbeSubnet1",
						"GwlbeSubnet2"
					]
				}
			]
		}
	},
	"Parameters": {
		"StackName": {
			"Type": "String",
			"Description": "A unique stack name passed by the master template"
		},
		"VPCCIDR": {
			"Type": "String",
			"Default": "10.1.0.0/16",
			"Description": "Provide a network CIDR for the VPC"
		},
		"PublicSubnet1": {
			"Type": "String",
			"Default": "10.1.1.0/24",
			"Description": "Provide a network CIDR for PublicSubnet1"
		},
		"PrivateSubnet1": {
			"Type": "String",
			"Default": "10.1.3.0/24",
			"Description": "Provide a network CIDR for PrivateSubnet1"
		},
		"GwlbeSubnet1": {
			"Type": "String",
			"Default": "10.1.5.0/24",
			"Description": "Provide a network CIDR for GwlbeSubnet1"
		},
		"PublicSubnet2": {
			"Type": "String",
			"Default": "10.1.2.0/24",
			"Description": "Provide a network CIDR for PublicSubnet2"
		},
		"PrivateSubnet2": {
			"Type": "String",
			"Default": "10.1.4.0/24",
			"Description": "Provide a network CIDR for PrivateSubnet2"
		},
		"GwlbeSubnet2": {
			"Type": "String",
			"Default": "10.1.6.0/24",
			"Description": "Provide a network CIDR for GwlbeSubnet2"
		}
	},
	"Conditions": {
	},
	"Resources": {
		"VPCID": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Ref": "VPCCIDR"
				},
				"EnableDnsSupport": "true",
				"EnableDnsHostnames": "true",
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"VPC"
								]
							]
						}
					}
				]
			}
		},
		"PublicSub1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"CidrBlock": {
					"Ref": "PublicSubnet1"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"PublicSubnet1"
								]
							]
						}
					}
				]
			}
		},
		"PrivateSub1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"CidrBlock": {
					"Ref": "PrivateSubnet1"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"PrivateSubnet1"
								]
							]
						}
					}
				]
			}
		},
		"GwlbeSub1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"CidrBlock": {
					"Ref": "GwlbeSubnet1"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"GwlbeSubnet1"
								]
							]
						}
					},
					{
						"Key": "fortigatecnf_subnet_type",
						"Value": "endpoint"
					}
				]
			}
		},
		"PublicSub2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"CidrBlock": {
					"Ref": "PublicSubnet2"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"PublicSubnet2"
								]
							]
						}
					}
				]
			}
		},
		"PrivateSub2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"CidrBlock": {
					"Ref": "PrivateSubnet2"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"PrivateSubnet2"
								]
							]
						}
					}
				]
			}
		},
		"GwlbeSub2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"CidrBlock": {
					"Ref": "GwlbeSubnet2"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"GwlbeSubnet2"
								]
							]
						}
					},
					{
						"Key": "fortigatecnf_subnet_type",
						"Value": "endpoint"
					}
				]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"IGW"
								]
							]
						}
					}
				]
			}
		},
		"AttachGateway": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"NatGatewayEIP1": {
			"Type": "AWS::EC2::EIP",
			"Properties": {
				"Domain": "vpc"
			}
		},
		"NatGatewayEIP2": {
			"Type": "AWS::EC2::EIP",
			"Properties": {
				"Domain": "vpc"
			}
		},
		"NatGateway1": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"NatGatewayEIP1",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "PublicSub1"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"NatGW1"
								]
							]
						}
					},
					{
						"Key": "sdn-group",
						"Value": "group1"
					}
				]
			}
		},
		"NatGateway2": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"NatGatewayEIP2",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "PublicSub2"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"NatGW2"
								]
							]
						}
					},
					{
						"Key": "sdn-group",
						"Value": "group1"
					}
				]
			}
		},
		"Public1RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"Public1RouteTable"
								]
							]
						}
					}
				]
			}
		},
		"Public2RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"Public2RouteTable"
								]
							]
						}
					}
				]
			}
		},
		"Private1RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"Private1RouteTable"
								]
							]
						}
					}
				]
			}
		},
		"Private2RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"Private2RouteTable"
								]
							]
						}
					}
				]
			}
		},
		"GwlbRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"GwlbRouteTable"
								]
							]
						}
					}
				]
			}
		},
		"IgwRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPCID"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "StackName"
									},
									"IgwRouteTable"
								]
							]
						}
					}
				]
			}
		},
		"Route1": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "GwlbRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"Route2": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "NatGateway1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway1"
				}
			}
		},
		"Route3": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "NatGateway2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway2"
				}
			}
		},
		"SubnetRouteTableAssociation1": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSub1"
				},
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				}
			}
		},
		"SubnetRouteTableAssociation2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSub2"
				},
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				}
			}
		},
		"SubnetRouteTableAssociation5": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSub1"
				},
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				}
			}
		},
		"SubnetRouteTableAssociation6": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSub2"
				},
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				}
			}
		},
		"SubnetRouteTableAssociation7": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "GwlbeSub1"
				},
				"RouteTableId": {
					"Ref": "GwlbRouteTable"
				}
			}
		},
		"SubnetRouteTableAssociation8": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "GwlbeSub2"
				},
				"RouteTableId": {
					"Ref": "GwlbRouteTable"
				}
			}
		},
		"GatewayRouteTableAssociation": {
			"Type": "AWS::EC2::GatewayRouteTableAssociation",
			"Properties": {
				"GatewayId": {
					"Ref": "InternetGateway"
				},
				"RouteTableId": {
					"Ref": "IgwRouteTable"
				}
			}
		}
	},
	"Outputs": {
		"VPCID": {
			"Value": {
				"Ref": "VPCID"
			},
			"Description": "VPC ID, for use in workload and routemap templates"
		},
		"VPCCIDR": {
			"Value": {
				"Ref": "VPCCIDR"
			},
			"Description": "VPCCIDR, for use in workload and routemap templates"
		},
		"PublicSub1": {
			"Value": {
				"Ref": "PublicSub1"
			},
			"Description": "PublicSub1 ID, for use in workload and routemap templates"
		},
		"PublicSub2": {
			"Value": {
				"Ref": "PublicSub2"
			},
			"Description": "PublicSub2 ID, for use in workload and routemap templates"
		},
		"PrivateSub1": {
			"Value": {
				"Ref": "PrivateSub1"
			},
			"Description": "PrivateSub1 ID, for use in workload and routemap templates"
		},
		"PrivateSub2": {
			"Value": {
				"Ref": "PrivateSub2"
			},
			"Description": "PrivateSub2 ID, for use in workload and routemap templates"
		},
		"GwlbeSub1": {
			"Value": {
				"Ref": "GwlbeSub1"
			},
			"Description": "GwlbeSub1 ID, for use in workload and routemap templates"
		},
		"GwlbeSub2": {
			"Value": {
				"Ref": "GwlbeSub2"
			},
			"Description": "GwlbeSub2 ID, for use in workload and routemap templates"
		},
		"IgwRouteTable": {
			"Value": {
				"Ref": "IgwRouteTable"
			},
			"Description": "IgwRouteTable ID, for use in workload and routemap templates"
		},
		"Public1RouteTable": {
			"Value": {
				"Ref": "Public1RouteTable"
			},
			"Description": "Public1RouteTable ID, for use in workload and routemap templates"
		},
		"Public2RouteTable": {
			"Value": {
				"Ref": "Public2RouteTable"
			},
			"Description": "Public2RouteTable ID, for use in workload and routemap templates"
		}
	}
}
